--- a/scss/gtk-3.0/widgets/_actionbar.scss
+++ b/scss/gtk-3.0/widgets/_actionbar.scss
@@ -4,5 +4,6 @@
 actionbar {
   padding: config.$spacing-medium;
   background: colors.$surface-strong;
+  color: colors.$white-strong;
   border-top: 1px solid colors.$white-weakest;
 }
