--- a/scss/gtk-3.0/widgets/_calendar.scss
+++ b/scss/gtk-3.0/widgets/_calendar.scss
@@ -20,7 +20,7 @@ calendar {
   }
 
   &:selected {
-    color: colors.$white-strongest;
+    color: colors.$black-strongest;
     border-radius: 0.5em;
     background: colors.$accent-primary;
   }
