--- a/scss/gtk-3.0/widgets/_dialog.scss
+++ b/scss/gtk-3.0/widgets/_dialog.scss
@@ -3,6 +3,7 @@
 
 dialog, messagedialog {
   background: colors.$surface-strong;
+  color: colors.$white-strong;
 
   .dialog-action-box {
     background: colors.$surface-moderate;
@@ -37,10 +38,10 @@ dialog, messagedialog {
 button {
       margin: 0em 0.3em 0.3em 0.3em;
       border: none;
-      background: colors.$black-weakest;
+      background: colors.$white-weakest;
       transition: background 170ms ease-out;
         &:hover:not(:active) {
-          background: colors.$black-weak;
+          background: colors.$white-weak;
       }
    }
 }
