--- a/scss/gtk-3.0/widgets/_list.scss
+++ b/scss/gtk-3.0/widgets/_list.scss
@@ -1,4 +1,5 @@
 @use '../colors';
+@use 'sass:color';
 @use '../config';
 
 list {
@@ -8,7 +9,8 @@ list {
     background: colors.$surface-strong;
     padding: config.$spacing-medium;
     &:hover {
-      background: colors.$surface-moderate;
+      background: color.change(colors.$accent-light, $alpha: config.$tint-medium);
+      color: #343434;
     }
   }
 
