--- a/scss/gtk-3.0/widgets/_menu.scss
+++ b/scss/gtk-3.0/widgets/_menu.scss
@@ -4,9 +4,10 @@
 menu {
   background: colors.$surface-weak;
   menuitem {
-    padding: config.$spacing-medium;
+    padding: config.$spacing-small;
     &:hover {
-      background: colors.$white-weakest;
+      background: colors.$yellow-normal;
+      color: colors.$black-strong;
     }
   }
 }
