--- a/scss/gtk-3.0/widgets/_radio.scss
+++ b/scss/gtk-3.0/widgets/_radio.scss
@@ -3,7 +3,7 @@
 radio {
   -gtk-icon-source: -gtk-recolor(url('../assets/symbolic/radio.symbolic.png'));
   -gtk-icon-transform: scale(0);
-  color: colors.$white-strongest;
+  color: colors.$black-strong;
   border: 0.2em solid colors.$white-weakest;
   border-radius: 100%;
   padding: 0.1em;
