--- a/scss/gtk-3.0/widgets/_spinbutton.scss
+++ b/scss/gtk-3.0/widgets/_spinbutton.scss
@@ -13,7 +13,7 @@ spinbutton {
       &:hover {
         background-clip: padding-box;
       }
-      border-color: color.change(colors.$purple-normal, $alpha: config.$tint-strong);
+      border-color: color.change(colors.$accent-normal, $alpha: config.$tint-strong);
     }
   }
 
