--- a/scss/gtk-3.0/widgets/_textview.scss
+++ b/scss/gtk-3.0/widgets/_textview.scss
@@ -12,6 +12,6 @@ textview {
 
   selection {
     background: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
-    color: colors.$white-strongest;
+    color: colors.$black-strongest;
   }
 }
