--- a/scss/gtk-3.0/widgets/_toolbar.scss
+++ b/scss/gtk-3.0/widgets/_toolbar.scss
@@ -3,10 +3,11 @@
 
 toolbar, .toolbar {
   background: colors.$surface-strong;
+  color: colors.$black-strong;
   padding: config.$spacing-medium;
 
   &.osd {
-    background: colors.$surface-weak;
+    background: colors.$white-weakest;
     padding: config.$spacing-medium;
     border-radius: config.$radius;
   }
