--- a/scss/gtk-3.0/widgets/_window.scss
+++ b/scss/gtk-3.0/widgets/_window.scss
@@ -8,7 +8,7 @@ window, assistant {
 window {
   &.csd {
     decoration {
-      box-shadow: 0 0 8px 0 black;
+      box-shadow: 0 0 8px 0 white;
       margin: 8px;
     }
   }
