--- a/scss/gtk-3.0/widgets/_frame.scss
+++ b/scss/gtk-3.0/widgets/_frame.scss
@@ -1,7 +1,7 @@
 @use '../colors';
 
 frame > border, .frame {
-  border: 1px solid colors.$surface-moderate;
+  border: 1px solid colors.$white-weakest;
 }
 
 scrolledwindow {
