changed the rest of the colors and fixed something idk

--- a/scss/gtk-3.0/_colors.scss
+++ b/scss/gtk-3.0/_colors.scss
@@ -16,22 +16,22 @@ $black-moderate: rgba(40, 40, 40, 0.42);
 $black-weak: rgba(40, 40, 40, 0.15);
 $black-weakest: rgba(40, 40, 40, 0.06);
 
-$red-normal: rgb(243, 139, 168);
-$red-light:rgb(246, 173, 194);
-$orange-normal: rgb(250, 179, 135);
-$orange-light: rgb(251, 201, 171);
-$yellow-normal: rgb(249, 226, 	175);
-$yellow-light: rgb(250, 231, 191);
-$green-normal: rgb(166, 227, 161);
-$green-light: rgb(192, 235, 189);
+$red-normal: rgb(255, 103, 134);
+$red-light:rgb(255, 148, 170);
+$orange-normal: rgb(255, 166, 116);
+$orange-light: rgb(255, 189, 152);
+$yellow-normal: rgb(255, 222, 148);
+$yellow-light: rgb(255, 230, 173);
+$green-normal: rgb(146, 198, 122);
+$green-light: rgb(178, 215, 161);
 $cyan-normal: rgb(148, 226, 213);
 $cyan-light: rgb(188, 237, 229);
-$blue-normal: rgb(148, 187, 250);
-$blue-light: rgb(197, 218, 252);
-$accent-normal: #e7a9a9;
-$accent-light: #f2d1d1;
-$pink-normal: rgb(228, 205, 255);
-$pink-light: rgb(248, 216, 239);
+$blue-normal: rgb(159, 226, 230);
+$blue-light: rgb(187, 234, 237);
+$accent-normal: rgb(226, 191, 255);
+$accent-light: rgb(224, 199, 239);
+$pink-normal: rgb(255, 165, 248);
+$pink-light: rgb(255, 183, 249);
 
 $accent-primary: $accent-normal;
 $accent-secondary: $green-normal;
