--- a/scss/gtk-3.0/_config.scss
+++ b/scss/gtk-3.0/_config.scss
@@ -6,9 +6,8 @@ $tint-weak: 0.3;
 $tint-medium: 0.6;
 $tint-strong: 0.8;
 
-$border-size: 0.2em;
+$border-size: 2px;
 
 $radius: 0.5em;
 
 $disabled-opacity: 0.3;
-$disabled-button-opacity: 0.5;
