--- a/scss/gtk-3.0/widgets/_button.scss
+++ b/scss/gtk-3.0/widgets/_button.scss
@@ -10,13 +10,14 @@ button {
   border-radius: config.$radius;
 
   &:hover:not(:active) { background: colors.$white-weak; }
-  &:disabled { opacity: config.$disabled-button-opacity; }
+  &:disabled { opacity: config.$disabled-opacity; }
 
   &:checked, &.suggested-action {
-    background: color.change(colors.$accent-normal, $alpha: config.$tint-medium);
-    color: colors.$white-strong;
+    // tint medium(initially)
+    background: color.change(colors.$accent-normal, $alpha: config.$tint-strong);
+    color: colors.$black-strong;
     &:hover:not(:active) {
-      background: color.change(colors.$accent-light, $alpha: config.$tint-medium);
+      background: color.change(colors.$accent-light, $alpha: config.$tint-strong);
     }
   }
 
