--- a/scss/gtk-3.0/widgets/_levelbar.scss
+++ b/scss/gtk-3.0/widgets/_levelbar.scss
@@ -6,7 +6,7 @@ levelbar {
       padding: 3px;
       border-radius: 3px;
 
-      &.filled { background: colors.$accent-secondary; }
+      &.filled { background: colors.$pink-light; }
       &.empty { background: colors.$surface-moderate; }
     }
   }
