--- a/scss/gtk-3.0/widgets/_list.scss
+++ b/scss/gtk-3.0/widgets/_list.scss
@@ -9,8 +9,8 @@ list {
     background: colors.$surface-strong;
     padding: config.$spacing-medium;
     &:hover {
-      background: color.change(colors.$accent-light, $alpha: config.$tint-medium);
-      color: #343434;
+      background: colors.$surface-weakest;
+      color: colors.$white-strong;
     }
   }
 
