--- a/scss/gtk-3.0/widgets/_menubar.scss
+++ b/scss/gtk-3.0/widgets/_menubar.scss
@@ -9,6 +9,7 @@ menubar {
 
     &:hover {
       background: colors.$white-weakest;
+      color: colors.$white-strong;
     }
 
     check, radio {
