--- a/scss/gtk-3.0/widgets/_tabs.scss
+++ b/scss/gtk-3.0/widgets/_tabs.scss
@@ -25,7 +25,7 @@ tabs {
     color: colors.$white-moderate;
 
     header &:checked {
-      border-color: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
+      border-color: colors.$blue-normal;
       color: colors.$white-strong;
     }
 
