--- a/scss/gtk-3.0/widgets/_popover.scss
+++ b/scss/gtk-3.0/widgets/_popover.scss
@@ -2,7 +2,7 @@
 
 popover {
   background: colors.$surface-weakest;
-  box-shadow: 0 0 5px colors.$white-moderate;
+  box-shadow: 0 0 5px colors.$black-moderate;
   border-radius: 0.5em;
   padding: 0.5em;
 
