--- a/scss/gtk-3.0/widgets/_entry.scss
+++ b/scss/gtk-3.0/widgets/_entry.scss
@@ -27,7 +27,7 @@ entry {
   }
 
   selection {
-    color: colors.$white-strong;
+    color: colors.$black-strong;
     background: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
   }
 
