--- a/scss/gtk-3.0/widgets/_list.scss
+++ b/scss/gtk-3.0/widgets/_list.scss
@@ -9,8 +9,8 @@ list {
     background: colors.$surface-strong;
     padding: config.$spacing-medium;
     &:selected {
-      background: colors.$accent-normal;
-      color: colors.$black-strong;
+      background: rgba(colors.$accent-normal, config.$tint-weak);
+      color: colors.$white-strong;
     }
     &:hover {
       background: colors.$surface-weakest;
