--- a/scss/gtk-3.0/widgets/_overlay.scss
+++ b/scss/gtk-3.0/widgets/_overlay.scss
@@ -1,9 +1,10 @@
 @use '../colors';
 
 overlay {
+	// specifying a background color here conflicts with color picker
 	revealer {
 		box {
-			background: colors.$surface-weakest;
+//			background: colors.$surface-weakest;
 			padding: 0.3em 0.1em 0.3em 0.3em;
 	}
  }
