fixed list highlight, combined selected and highlighted into one selector

--- a/scss/gtk-3.0/widgets/_list.scss
+++ b/scss/gtk-3.0/widgets/_list.scss
@@ -8,13 +8,9 @@ list {
   row {
     background: colors.$surface-strong;
     padding: config.$spacing-medium;
-    &:selected {
-      background: rgba(colors.$accent-normal, config.$tint-weak);
-      color: colors.$white-strong;
-    }
-    &:hover {
-      background: colors.$surface-weakest;
-      color: colors.$white-strong;
+    &:hover,&:selected {
+      background: colors.$accent-light;
+      color: colors.$black-strong;
     }
   }
 
