--- a/scss/gtk-3.0/widgets/_menu.scss
+++ b/scss/gtk-3.0/widgets/_menu.scss
@@ -22,9 +22,27 @@ menu {
       color: colors.$black-strong;
     }
   }
-  arrow {
+  /*arrow {
+    padding: 0.1em;
+  }*/
+  arrow.left, arrow.right {
+    min-height: 1em;
+    min-width: 1em;
+  }
+  arrow.top, arrow.bottom{
     min-height: 1.5em;
     min-width: 1.5em;
-    -gtk-icon-source: -gtk-recolor(url("../assets/svg/arrow-right.svg"));
+  }
+  arrow.left {
+    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
+  }
+  arrow.right {
+    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
+  }
+  arrow.top {
+    -gtk-icon-source: -gtk-icontheme("pan-up-symbolic");
+  }
+arrow.bottom {
+    -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
   }
 }
