1) fixed entry label color 2) fixed buttons:   *) fixed link button label underline   *) fixed image and flat button colors 3) fixed list selected colors 4) fixed iconview selected item colors 5) fixed treeview selected colors 6) fixed scale widget slider color 7) fixed active tab underline color 8) tried fixing toolbar's button margin issue 9) added nightfox background colors( ~blusish)

--- a/scss/gtk-3.0/applications/_nemo.scss
+++ b/scss/gtk-3.0/applications/_nemo.scss
@@ -5,6 +5,10 @@
 .nemo-window {
   .nemo-places-sidebar {
     background: colors.$surface-strong;
+    :selected {
+      background: colors.$accent-normal;
+      color: colors.$black-strongest;
+    }
   }
 
   .primary-toolbar {
@@ -24,7 +28,9 @@
 
   .nemo-window-pane {
     :selected {
-      background: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
+      // background: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
+      background: colors.$accent-normal;
+      color: colors.$black-strongest;
     }
     :active {
       background: color.change(colors.$accent-primary, $alpha: config.$tint-medium);
