--- a/scss/gtk-3.0/widgets/_list.scss
+++ b/scss/gtk-3.0/widgets/_list.scss
@@ -15,7 +15,8 @@ list {
    }*/
     }
     &:selected {
-      background: transparentize(colors.$accent-light, 0.5);
+      // background: transparentize(colors.$accent-light, 0.5);
+      background: colors.$accent-normal;
       color: colors.$black-strong;
     }  
   }
