--- a/scss/gtk-3.0/_colors.scss
+++ b/scss/gtk-3.0/_colors.scss
@@ -1,4 +1,5 @@
-$surface-strongest: rgb(38, 38, 38);
+//original colors
+$surface-strongest: rgb(39, 38, 38);
 $surface-strong: rgb(40, 40, 40);
 $surface-moderate: rgb(42, 42, 42);
 $surface-weak: rgb(44, 44, 44);
