--- a/scss/gtk-3.0/widgets/_scale.scss
+++ b/scss/gtk-3.0/widgets/_scale.scss
@@ -9,7 +9,7 @@ scale {
       background: colors.$white-weak;
       border-radius: 1em;
       slider {
-        background: colors.$yellow-light;
+        background: colors.$accent-normal;
         padding: 4px;
         margin: -4px;
         border-radius: 1em;
