--- a/scss/gtk-3.0/widgets/_check.scss
+++ b/scss/gtk-3.0/widgets/_check.scss
@@ -6,6 +6,8 @@ check {
   color: colors.$black-strongest;
   border: 0.2em solid colors.$white-weakest;
   border-radius: 0.3em;
+  // fixes radio and checkbox margin issue in menu's
+  margin: 0.3em;
   padding: 0.1em;
   min-width: 0.7em;
   min-height: 0.7em;
