--- a/scss/gtk-3.0/widgets/_headerbar.scss
+++ b/scss/gtk-3.0/widgets/_headerbar.scss
@@ -5,6 +5,10 @@
 headerbar {
   background: colors.$surface-moderate;
   padding: config.$spacing-medium;
+// adding a min. height fixes the headerbar issue in some applications
+&.titlebar {
+  min-height: 40px;
+  }
 
   button.titlebutton {
     padding: calc(config.$spacing-medium + 0.2em);
