--- a/scss/gtk-3.0/widgets/_pathbar.scss
+++ b/scss/gtk-3.0/widgets/_pathbar.scss
@@ -3,7 +3,9 @@
 .linked.path-bar {
     button {
       image:not(:only-child) {
-        margin-right: config.$spacing-medium;
+        // margin-right: config.$spacing-medium;
+        // fixed margin issue for nemo's pathbar for folders with no folder icon
+         margin-right: calc(config.$spacing-small - 0.1em);
       }
 
       &:not(:first-child) {
