--- a/scss/gtk-3.0/applications/_nautilus.scss
+++ b/scss/gtk-3.0/applications/_nautilus.scss
@@ -16,6 +16,7 @@ window.nautilus-window {
     background: colors.$surface-strong;
     color: colors.$white-strong;
     padding: config.$spacing-small;
+    border: config.$border-size solid colors.$white-moderate;
 
     &.bottom.left {
       border-top-right-radius: config.$radius;
