--- a/scss/gtk-3.0/widgets/_button.scss
+++ b/scss/gtk-3.0/widgets/_button.scss
@@ -28,6 +28,7 @@ button {
       text-decoration: underline colors.$accent-normal wavy;
   }
 }
+
   // temporary fix for text buttons as accent color is light
   &.text-button:checked {
     color: colors.$black-strong;
@@ -47,10 +48,13 @@ button {
       background: color.change(colors.$red-light, $alpha: config.$tint-medium);
     }
   }
+
 // nautilus key shortcuts window
   &.circular {
     border-radius: 100%;
-    padding: calc(config.$spacing-medium + 0.2em);
+    // padding: calc(config.$spacing-medium + 0.2em);
+    padding: config.$spacing-medium calc(config.$spacing-medium + 0.4em);
+
   }
 
   &.flat {
